<resources>
    <string name="app_name">Product Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_edit_product">EditProduct</string>
    <string name="title_activity_show_product">ShowProduct</string>
    <string name="title_activity_list_product">ListProduct</string>
    <string name="action_settings">Settings</string>
    <!--product-->
    <string name="product_code">条码: </string>
    <string name="product_name">名称: </string>
    <string name="product_category">类别: </string>
    <string name="product_specification">规格: </string>
    <string name="product_purchasePrice">进价: </string>
    <string name="product_price">售价: </string>
    <string name="product_nothing">该商品暂不存在！</string>
    <!--button-->
    <string name="button_cancel">取消</string>
    <string name="button_confirm">确认</string>
    <string name="button_album">本地相册</string>
    <string name="button_camera">打开相机</string>
    <string name="button_return">返回</string>
    <string name="button_product_search">商品查询</string>
    <string name="button_product_edit">商品录入</string>
    <!--login-->
    <string name="title_activity_login">Sign in</string>
    <string name="login_name">Login Name</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_list">ListActivity</string>
</resources>
