<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_show_product"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardview_default_radius"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_product_image"
                    android:layout_width="200dp"
                    android:layout_height="240dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/product_name"
                android:textColor="@color/lightGray"/>
            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/product_category"
                android:textColor="@color/lightGray"/>
            <TextView
                android:id="@+id/tv_product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/product_specification"
                android:textColor="@color/lightGray"/>
            <TextView
                android:id="@+id/tv_product_specification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/product_price"
                android:textColor="@color/lightGray"/>
            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_show_nothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_nothing"
                android:textAlignment="center"
                android:visibility="gone"
                android:textSize="40dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/btn_return"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_return"
                android:textSize="40dp"
                android:theme="@style/AppTheme.Button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>