<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="online.tinymarket.product.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="60dp"
            android:theme="@style/AppTheme.Button"
            android:textSize="50dp"
            android:text="@string/button_product_search" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="60dp"
            android:theme="@style/AppTheme.Button"
            android:textSize="50dp"
            android:text="@string/button_product_edit" />

    </LinearLayout>

</LinearLayout>
