<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_edit_product"/>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/iv_product_image"
                        android:layout_width="200dp"
                        android:layout_height="240dp"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_product_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/product_code"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/product_name"/>
                    <EditText
                        style="@style/Widget.AppCompat.EditText"
                        android:id="@+id/et_product_name"
                        android:layout_width="match_parent"
                        android:textSize="30dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/product_category"/>
                    <Spinner
                        android:id="@+id/sp_product_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/product_specification"/>
                    <EditText
                        style="@style/Widget.AppCompat.EditText"
                        android:id="@+id/et_product_specification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/product_purchasePrice"/>
                    <EditText
                        style="@style/Widget.AppCompat.EditText"
                        android:id="@+id/et_product_purchasePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"
                        android:text="@string/product_price"/>
                    <EditText
                        style="@style/Widget.AppCompat.EditText"
                        android:id="@+id/et_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_cancel"
                        android:theme="@style/AppTheme.Button"
                        android:text="@string/button_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10px"/>
                    <Button
                        android:id="@+id/btn_confirm"
                        android:theme="@style/AppTheme.Button"
                        android:text="@string/button_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10px"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>